Fix a class name

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>stm32f4_template_git</name>
+	<name>stm32f4_template</name>
 	<comment></comment>
 	<projects>
 	</projects>
